# pokemon-manager

./: .gitignore  .gitmodules  Intro.md  README.md
backend/: CMakeLists.txt  main.cpp  server.cpp
backend/include/: SinglesMatch.h  Trainer.h
backend/src/: SinglesMatch.cpp  Trainer.cpp
database/: db.sqlite  schema.sql
database/backups/: db copy 2.sqlite  db copy 3.sqlite  db copy.sqlite  db-copy2.sqlite  db_backup.sqlite
database/migrators/: blankratingadd.py  emptytrainerratings.py  mongoimport.py  nicknames.py  pokemonmigrator.py
database/oldjson/: perennialSeasons.json  perennialTeams.json  players.json  ratings.json  regions.json
frontend/: package-lock.json  package.json
frontend/src/: App.scss  App.tsx  index.tsx  types.ts
frontend/src/components/: Navbar.tsx  Sidebar.tsx  SortableTable.tsx
frontend/src/components/css/: Navbar.scss  Pokedex.scss  Sidebar.scss  SortableTable.scss  Trainers.scss
frontend/src/components/league/: League.tsx  leaguetypes.ts
frontend/src/components/pokedex/: Pokedex.tsx  PokemonBasicInfo.tsx  PokemonDetail.tsx  PokemonEntries.tsx  PokemonLearnset.tsx  PokemonLocations.tsx  PokemonSprites.tsx  TypeBadge.tsx
frontend/src/components/regions/: RegionDetail.tsx  RegionLeague.tsx  RegionList.tsx  RegionMap.tsx
frontend/src/components/trainers/: AddPokemon.tsx  AddTrainer.tsx  EditFieldRating.tsx  EditFormatRating.tsx  EditMentalRating.tsx  EditTrainer.tsx  EditTrainerPokemon.tsx  InactiveTrainerDetail.tsx  InactiveTrainerList.tsx  TrainerDetail.tsx  TrainerList.tsx  TrainerPokemon.tsx  TrainerPokemonDetail.tsx  TrainerPokemonInfo.tsx  (+2 more)
frontend/src/debug/: BattleSimulator.tsx
frontend/src/routes/: InactiveTrainers.tsx  Regions.tsx  Trainers.tsx
server/: app.js  package-lock.json  package.json
server/routes/: api.js  league.js  pokemon.js  regions.js  trainers.js
